--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    
+    "test": "jest --testTimeout=30000 --runInBand"
   },
   "author": "",
   "license": "ISC",
@@ -13,8 +14,23 @@
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "jade": "^1.11.0",
+    "jest": "^27.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.0",
-    "request": "^2.88.2"
+    "mongoose": "^6.0.4",
+    "mongoskin": "^2.1.0",
+    "nodemon": "^2.0.12",
+    "request": "^2.88.2",
+    "supertest": "^6.1.6"
+  },
+  "devDependencies": {
+    "@shelf/jest-mongodb": "^2.0.3",
+    "cross-env": "^7.0.3"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
