commented out users

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "user_service":"node ./services/user_service",
     "dashboard":"node ./controllers/dashboard",
     "notifications":"node ./controllers/notifications",
-    "start": "concurrently \"npm run question_service\" \"npm run answer_service\" \"npm run comment_service\" \"npm run user_service\" \"npm run dashboard\" \"npm run notifications\"",
-    "dev":"start npm run question_service && start npm run answer_service && start npm run comment_service && start npm run user_service && start npm run dashboard && start npm run notifications"
+    "start": "concurrently \"npm run question_service\" \"npm run answer_service\" \"npm run comment_service\" \"npm run dashboard\" \"npm run notifications\"",
+    "dev":"start npm run question_service && start npm run answer_service && start npm run comment_service && start npm run dashboard && start npm run notifications"
   },
   "author": "",
   "license": "ISC",
