--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "notification_service": "node ./services/notification_service",
     "start": "concurrently \"npm run question_service\" \"npm run answer_service\" \"npm run comment_service\" \"npm run dashboard_service\" \"npm run notification_service\" \"npm run user_service\"",
     "dev": "start npm run question_service && start npm run answer_service && start npm run comment_service && start npm run dashboard && start npm run notifications",
-    "kube": "kubectl port-forward service/skillfinal 8089:8089 8088:8088 8075:8075 5050:5050 8083:8083 3300:3300"
+    "kube": "kubectl port-forward service/skillfins 8089:8089 8088:8088 8075:8075 5050:5050 8083:8083 3300:3300",
+    "sonar": "node sonar-project.js"
   },
   "author": "",
   "license": "ISC",
@@ -24,25 +25,36 @@
     "fs": "0.0.1-security",
     "jade": "^1.11.0",
     "jest": "^27.1.0",
+    "js-yaml": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.0",
     "mongoose": "^6.0.4",
     "mongoskin": "^2.1.0",
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.12",
+    "path": "^0.12.7",
     "request": "^2.88.2",
-    "supertest": "^6.1.6"
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "@shelf/jest-mongodb": "^2.0.3",
     "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
-    "eslint-plugin-sonarjs": "^0.10.0"
+    "eslint-plugin-sonarjs": "^0.10.0",
+    "jest-sonar-reporter": "^2.0.0",
+    "sonarqube-scanner": "^2.8.1",
+    "supertest": "^6.1.6"
   },
   "jest": {
     "testEnvironment": "node",
     "coveragePathIgnorePatterns": [
       "/node_modules/"
-    ]
+    ],
+    "testResultsProcessor": "jest-sonar-reporter"
+  },
+  "jestSonar": {
+    "reportPath": "coverage",
+    "reportFile": "test-reporter.xml",
+    "indent": 4
   }
 }
