--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cli": "^1.0.1",
     "concurrently": "^6.2.1",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "jade": "^1.11.0",
@@ -34,6 +36,7 @@
     "nodemon": "^2.0.12",
     "path": "^0.12.7",
     "request": "^2.88.2",
+    "shellsubstitute": "^1.2.0",
     "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
