--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "google-auth-library": "^7.9.1",
     "jade": "^1.11.0",
     "jest": "^27.1.1",
     "js-yaml": "^4.1.0",
